# Agentic-Trading-Platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  MARKET_CANDLES_COMPLETE.md  Makefile  POSTMAN_TESTING_GUIDE.md  README.md  build-and-push.sh  cleanup-fresh-start.sh  cpi_scraper_fixed.py  docker-compose.yml  docker-prod.sh  docker-restart.sh  docker.env.example  docker.sh  kafka.sh  kafkaStudio.py  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.txt  push_low_risk_events.py  push_low_risk_events.sh  push_sample_notifications.sh  quant-stream  requirements.txt  restart-all.sh  restart-celery.sh  restart.sh  setup.sh  staticdata.csv  subscriber.sh  test_trading_signal_flow.sh  transcript.py  tsconfig.json  turbo.json
quant-stream/: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  alpha158.csv  alpha158_lgbm.csv  alpha158_lgbm_full.csv  alpha158_lstm_full_4yr.csv  output.csv  pyproject.toml  requirements.txt  update_indian_market_data.py  visualize.ipynb
quant-stream/.data/: README.md  nifty500.txt
quant-stream/alphacopilot/: .env.example  README.md  __init__.py  async_utils.py  cli.py  graph.py  mcp_client.py  mlflow_utils.py  pyproject.toml  recorder_utils.py  types.py
quant-stream/alphacopilot/nodes/: __init__.py  factor_construct.py  factor_propose.py  factor_validate.py  factor_workflow.py  feedback.py
quant-stream/alphacopilot/server/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  services.py
quant-stream/examples/: 01_quickstart_backtest.py  02_manual_factor_construction.py  03_expression_based_alphas.py  04_ml_model_comparison.py  05_expression_parser_demo.py  README.md
quant-stream/examples/configs/: README.md  alpha158.yaml  alpha158_lstm.yaml  alpha_158.yaml  basic_momentum.yaml  beta_neutral.yaml  custom_factors_demo.yaml  lightgbm_strategy.yaml  multi_factor.yaml  test.yaml  wtf.yaml
quant-stream/examples/mcp_integration/: README.md  agent_integration.py
quant-stream/quant_stream/: __init__.py  cli.py
quant-stream/quant_stream/backtest/: __init__.py  costs.py  engine.py  metrics.py  portfolio.py  reporting.py  runner.py
quant-stream/quant_stream/config/: __init__.py  defaults.py  loader.py  schema.py
quant-stream/quant_stream/data/: __init__.py  replayer.py  schema.py
quant-stream/quant_stream/factors/: __init__.py  evaluator.py
quant-stream/quant_stream/functions/: __init__.py  crosssectional.py  elementwise.py  helpers.py  indicators.py  math_ops.py  rolling.py  timeseries.py  twocolumn.py
quant-stream/quant_stream/mcp_server/: __init__.py  __main__.py  app.py  config.py  config.yaml  worker.py
quant-stream/quant_stream/models/: __init__.py  base.py  lightgbm_model.py  linear_model.py  lstm_model.py  training.py  tree_model.py  utils.py  xgboost_model.py
quant-stream/quant_stream/recorder/: __init__.py  recorder.py  utils.py
quant-stream/quant_stream/strategy/: __init__.py  base.py  beta_neutral.py  topk.py  weight.py
quant-stream/quant_stream/utils/: __init__.py  (+2 more)
(+717 files in other folders)
